--- a/style.css
+++ b/style.css
@@ -2874,6 +2874,10 @@ h4.heading-feature {
     overflow: hidden;
 }
 
+.content-wrapper.a {
+    background-color: none!important;
+}
+
 a:-webkit-any-link {
     cursor: pointer;
     text-decoration: none!important;
